<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold|italic"
        android:text="@string/random_quotes_generator_collector"
        android:visibility="visible"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:id="@+id/randomLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_random_name_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Your Name Please"
            android:textSize="15sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_random_enter_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/submit"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="What Would You Like To Do?"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/btn_enterQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/enter_a_new_quote"
        android:textSize="10sp"
        android:visibility="visible"
        android:onClick="enterQuote"/>

    <Button
        android:id="@+id/btn_generateToastQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/generate_toast_quote"
        android:textSize="10sp"
        android:visibility="visible"
        android:onClick="generateQuote"/>

    <Button
        android:id="@+id/btn_generateBottomQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/generate_quote_at_bottom"
        android:textSize="10sp"
        android:visibility="visible"
        android:onClick="generateQuote"/>

    <Button
        android:id="@+id/btn_showAllQuotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/show_all_quotes"
        android:textSize="10sp"
        android:visibility="visible"
        android:onClick="showAllQuotes"/>

    <!-- android:layout_marginTop="100dp" -->
    <TextView
        android:id="@+id/textView_generateQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:textStyle="italic"
        android:gravity="center_horizontal"
        android:text="Generated Quote Will Appear Here" />

    <TextView
        android:id="@+id/editText_showQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorBlack"
        android:textStyle="italic|bold"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_random_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Random Background"
            android:textSize="10sp"
            android:textStyle="italic"
            android:layout_weight="1"/>

        <Switch
            android:id="@+id/btnSwitch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.55"
            android:textStyle="bold"
            android:textSize="10sp"
            android:checked="true"
            android:gravity="center"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_do_random_something"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Do Something"
            android:textSize="10sp"
            android:textStyle="italic"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_reset_alpha"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:onClick="onClickResetAlpha"
        android:textSize="5sp"
        android:text="Reset Alpha - invisible"
        android:visibility="visible" />

<!--
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="#009284"
        android:padding="10dp"
        android:text="Submit"
        android:textColor="#fff"
        android:textStyle="bold" />
                                    -->

</LinearLayout>